feat: page routing feature added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body class="font-inter">
     <header class="container mx-auto">
         <nav class="flex justify-between items-center">
-            <button class="px-8 py-2 bg-primary-color font-bold rounded-md">Blog</button>
+            <button class="px-8 py-2 bg-primary-color font-bold rounded-md" id="blog-btn">Blog</button>
             <div class="flex items-center gap-4">
                 <img src="./assets/logo.png" alt="logo" class="hidden md:block">
                 <h5 class="font-bold hidden md:block">Donate Bangladesh</h5>
