--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
           }
         }
       </script>
+      <script src="./js/blog.js" defer></script>
 
     <style>
   .font-inter{
@@ -40,7 +41,7 @@
 <body class="font-inter">
     <header class="container mx-auto">
         <nav class="flex justify-between items-center">
-            <button class="px-8 py-2 bg-primary-color font-bold rounded-md">Blog</button>
+            <button class="px-8 py-2 bg-primary-color font-bold rounded-md" id="home-btn">Home</button>
             <div class="flex items-center gap-4">
                 <img src="./assets/logo.png" alt="logo" class="hidden md:block">
                 <h5 class="font-bold hidden md:block">Donate Bangladesh</h5>
