feat: validation added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      
 </head>
 <body class="font-inter">
-    <header class="container mx-auto">
+    <header class="container mx-auto sticky top-0 z-50 bg-[#F9F7F3] p-5 backdrop-blur-md">
         <nav class="flex justify-between items-center">
             <button class="px-8 py-2 bg-primary-color font-bold rounded-md" id="blog-btn">Blog</button>
             <div class="flex items-center gap-4">
@@ -51,9 +51,9 @@
         </nav>
     </header>
 
-    <main class="mt-8">
+    <main class="">
         <!-- Donation and history tab -->
-         <div class="text-center space-x-4">
+         <div class="text-center space-x-4 sticky z-40 top-[90px] border-2 border-red-600 backdrop-blur-md p-5">
             <button class="px-8 py-2 bg-primary-color font-bold rounded-md" id="donation-tab">Donation</button>
             <button class="px-8 py-2 font-bold rounded-md border-2" id="history-tab">History</button>
          </div>
