feat: create FAQ section

--- a/blog.html
+++ b/blog.html
@@ -67,28 +67,29 @@
                  <input type="radio" name="my-accordion-2" checked="checked" />
                  <div class="collapse-title text-xl font-medium">What is document object model?</div>
                  <div class="collapse-content">
-                   <p></p>
+                   <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the page so that programs can change the document structure, style, and content.</p>
                  </div>
                </div>
                <div class="collapse collapse-arrow bg-base-200">
                  <input type="radio" name="my-accordion-2" />
                  <div class="collapse-title text-xl font-medium">How do you select an element from DOM</div>
                  <div class="collapse-content">
-                   <p>hello</p>
+                   <p>We can use various methods to select an element such as getElementById .  getElementById method allows us to select an element by its id.  Using getElementsByClassName,  Using getElementsByTagName,  Using getElementsByTagName and  Using querySelectorAll we can select an element from HTML DOM
+                   .</p>
                  </div>
                </div>
                <div class="collapse collapse-arrow bg-base-200">
                  <input type="radio" name="my-accordion-2" />
                  <div class="collapse-title text-xl font-medium">What is the event delegation in the context of DOM</div>
                  <div class="collapse-content">
-                   <p>hello</p>
+                   <p>Even delegation means attach a listener to a common container . Instead of attaching individual event listeners to each child element, we attach a single event listener to a common container element higher in the DOM.</p>
                  </div>
                </div> 
                 <div class="collapse collapse-arrow bg-base-200">
                  <input type="radio" name="my-accordion-2" />
                  <div class="collapse-title text-xl font-medium">How do you manipulate an elements attributes and styles use the DOM</div>
                  <div class="collapse-content">
-                   <p>hello</p>
+                   <p>We can use getAttribute(), setAttribute() and removeAttribute method styles an element use the DOM </p>
                  </div>
                </div>
          </div>
