make donation and history tab sticky

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="cards-container">
 
              <!-- Donation and history tab -->
-         <div class="text-center space-x-4 sticky z-40 top-[89px] backdrop-blur-md p-5">
+         <div class="text-center space-x-4 sticky z-40  top-[80px] md:top-[89px] backdrop-blur-md p-5">
             <button class="px-8 py-2 bg-primary-color font-bold rounded-md" id="donation-tab">Donation</button>
             <button class="px-8 py-2 font-bold rounded-md border-2" id="history-tab">History</button>
          </div>
